--- a/flask-survey/templates/home.html
+++ b/flask-survey/templates/home.html
@@ -13,6 +13,10 @@
         {% endblock h1%}
     </h1>
 
+    {% for msg in get_flashed_messages() %}
+        <p> {{msg}} </p>
+    {% endfor %}
+
     {% block  content%}
         <p>
         {{instructions}}
